@@ -38,14 +38,14 @@ download_system_update() {
 
     if [ -f /usr/sbin/hbsd-update ] ; then
         options=""
-        if [ $use_dnssec -eq 0 ]; then options="-d"; fi
+        if [ $use_dnssec -eq 0 ]; then options="${options} -d"; fi
         if [ -n "$jail" ] ; then
             if [ -d /.jail_system ]; then
                 # upgrade base jail_system root with local hbsd-update.conf (for "thin" jails)
-                options="-r /.jail_system/"
+                options="${options} -r /.jail_system/"
             else
                 # use -j flag from hbsd-update to let it handle upgrade of "full" jail
-                options="-j $jail"
+                options="${options} -j $jail"
             fi
         fi
         if [ -n "$system_version" ]; then
