@@ -5,6 +5,11 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 
+## [Unreleased]
+### Fixed
+- [UPDATE] [SYSTEM] Ensure options used during hbsd-update are all kept for jails' upgrades
+
+
 ## [2.1.0] - 2023-03-16
 ### Added
 - [UPGRADE] [HBSD13] Add a script to register new Vulture's HBSD13 own repositories (and disable previous ones)
